# IGen

./: .gitignore  out.txt
benchmarks/ATLAS_gemm/: CMakeLists.txt  dgemm_bench_ddi.cpp
benchmarks/FFNN_mnist/: CMakeLists.txt
benchmarks/Spiral_DFT/: CMakeLists.txt
benchmarks/Spiral_DFT_div/: CMakeLists.txt
benchmarks/immintrin_benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_macros.h  common.h  init.cpp  main.cpp  out.txt  random_range.cpp  ref_vals.txt  register.h  test_include.h  try.sh  verify.cpp
benchmarks/immintrin_benchmarks/benchmarks/: mm256_add_pd.cpp  mm256_add_pd.h  mm256_blend_pd.cpp  mm256_blend_pd.h  mm256_div_pd.h  mm256_extractf128_pd.h  mm256_fmadd_pd.h  mm256_insertf128_pd.h  mm256_load_pd.cpp  mm256_loadu_pd.cpp  mm256_mul_pd.h  mm256_shuffle_pd.h  mm256_store_pd.cpp  mm256_storeu_pd.cpp  mm256_sub_pd.h  mm256_unpackhi_pd.h  x.h
clang_test/: ASTVisitor.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  accuracy_template.cpp  artcomp  artcomp1.py  ast.h  ast_consumer.h  ast_opt.py  ast_visitor.h  basic_block.h  clang.h  clang_ast_visitor.cbp  cmake_install.cmake  common.py  compile_template.sh  decimal_arith.py  ex.c  expr_ast.py  expr_prefix.txt  frontend_action.h  herbie.py  herbie.txt  herbie_ir.txt  herbie_utils.py  herbie_vals.txt  herbie_vals_out_prefix.txt  herbie_vals_prefix.txt  herbie_visitor.h  igen_artcomp  igen_herbie_artcomp  igen_herbie_power_30  igen_herbie_power_30_bad  igen_herbie_quadratic_formula_large  igen_herbie_quadratic_formula_medium  igen_herbie_quadratic_formula_small  igen_herbie_square_root  igen_power_30  (+20 more)
clang_test/tests/: __prep.c  artcomp.cpp  artcomp1.cpp  artcomp2.cpp  basic.cpp  basic.cpp.herbie  dft.cpp  for_recursive_assign.cpp  if.cpp  if_elif_else.cpp  igen_artcomp.cpp  igen_err.cpp  igen_herbie_artcomp.cpp  igen_herbie_artcomp1.cpp  igen_herbie_dft.cpp  igen_herbie_multiple_functions.cpp  igen_herbie_power_30.cpp  igen_herbie_power_30_bad.cpp  igen_herbie_quadratic_formula_large.cpp  igen_herbie_quadratic_formula_medium.cpp  igen_herbie_quadratic_formula_small.cpp  igen_igen_err.cpp  igen_power_30_bad.cpp  igen_quadratic_formula_large.cpp  igen_quadratic_formula_medium.cpp  igen_quadratic_formula_small.cpp  multiple_decl_one_line.cpp  multiple_functions.cpp  power_30.cpp  power_30_bad.cpp  quadratic_formula.cpp  quadratic_formula_large.cpp  quadratic_formula_medium.cpp  quadratic_formula_small.cpp  split_decl_and_def.cpp  square_root.cpp  x.cpp
herbie/: ASTTraverser.h  ASTVisitor.h
herbie/tests/: 1.cpp
herbie_benchmarks/: common.py
herbie_benchmarks/artcomp1/: run.py
herbie_benchmarks/artcomp2/: artcomp2.py  run.py  src.cpp
herbie_benchmarks/complex_root/: run.py
herbie_benchmarks/cubic_formula_newton_root/: run.py  src.cpp
herbie_benchmarks/euler_method/: run.py  src.cpp
herbie_benchmarks/isosceles_triangle_area/: run.py  src.cpp
herbie_benchmarks/newton_cube_root/: run.py  src.cpp
herbie_benchmarks/newton_cube_root_sue/: run.py  src.cpp
herbie_benchmarks/power30/: run.py
herbie_benchmarks/quadratic_formula/: run.py  src.cpp
herbie_benchmarks/shoelace_formula/: run.py  src.cpp
herbie_benchmarks/sin2x_plus_cos2x/: run.py  src.cpp
herbie_benchmarks/single_use_expression/: run.py  src.cpp
herbie_benchmarks/taylor_test/: igen_src.cpp  out  src.cpp  taylor.in
herbie_benchmarks/thesis/: igen_src.cpp  src.cpp
herbie_benchmarks/triangle_circumcircle/: run.py  src.cpp
herbie_benchmarks/triangle_heron/: herbie_ir.txt  herbie_vals.txt  herbie_vals_out_prefix.txt  herbie_vals_prefix.txt  run.py  src.cpp
herbie_compiler/: CMakeCache.txt  CMakeLists.txt  Makefile  ast_consumer.h  basic_block.h  clang.cpp  clang.h  cmake_install.cmake  frontend_action.h  herbie_visitor.h  inline_visitor.h  main.cpp  power_30.py  quadratic_formula.py  utils.cpp
herbie_compiler/tests/: basic_decl_def_together.cpp  for.cpp  if_elif_else_no_braces.cpp  if_else.cpp  multiple_assignments_one_line.cpp  nested_block.cpp  simple_assignment.cpp
herbie_runner/: accuracy_template.cpp  ast_opt.py  expr_ast.py  herbie.py  herbie_utils.py  runtime_template.cpp
igen_lib/: igen_big_accumulator.h  igen_dd_immintrin.h  igen_dd_immintrin_fallback.h  igen_dd_immintrin_internal.h  igen_dd_immintrin_opt.c  igen_dd_immintrin_opt.h  igen_dd_lib_scalar.h  igen_dd_lib_vec.h  igen_dd_math.h  igen_dd_reduction.h  igen_debug.c  igen_immintrin_internal.h  igen_immintrin_opt.h  igen_lib_scalar.h  igen_lib_vec.h  igen_logic.h  igen_math.h  igen_reduction.h  rem_pio2_scs.h
igen_lib/igen_dd_immintrin_opt/: mm256_add_pd.h  mm256_div_pd.h  mm256_fmadd_pd.h  mm256_mul_pd.h  mm256_sub_pd.h
(+27 files in other folders)
